<resources>
    <string name="app_name" translatable="false">MARTA Wallet</string>
    <string name="uzbek">Uzbekcha</string>
    <string name="rus">Русский</string>
    <string name="en">English</string>
    <string name="arab">بالعربية</string>
    <string name="next">Next</string>
    <string name="feture"> ok</string>
    <string name="tel_number">Phone number</string>
    <string name="nextt">Next</string>
    <string name="txt_msg_close">Do you really want to close the registration?</string>
    <string name="action_close">Close</string>
    <string name="action_cancel">Cancel</string>
    <string name="permission_is_needed">Permission is needed</string>
    <string name="back">Back</string>
    <string name="approve">Approve</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="use_fingerprint_or_enter_pin_code">Use fingerprint or enter PIN code</string>
    <string name="new_password">New password</string>
    <string name="forgot_pin_code">Forgot\nyour PIN?</string>
    <string name="tmp_password">Temporary password</string>
    <string name="err_msg_otp_length">One time password can\'t be less than 5 digits</string>
    <string name="repeat_enter_new_pin_code">Repeat PIN</string>
    <string name="lock_screen_title_pf">Input pin code or use fingerprint</string>
    <string name="no_fingerprints_message_pf">No fingerprints found. Please add fingerprints in the settings if you want to use this authorization method."</string>
    <string name="no_fingerprints_title_pf">"No fingerprints found"</string>
    <string name="cancel_pf">Cancel</string>
    <string name="settings_pf">Settings</string>
    <string name="valuta">$</string>
<string name="wait">" Please wait"</string>
    <string name="phone_number">Phone number</string>
    <string name="main">main</string>
    <string name="favorite">favorite</string>
    <string name="monitoring">monitoring</string>
    <string name="account">account</string>
    <string name="total_funds">total funds</string>
    <string name="add_card">Add card</string>
    <string name="search">Search</string>
    <string name="email">email</string>
    <string name="scan_again">Scan again</string>


</resources>