<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/numPad"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/d1"
            style="@style/numpad_key"
            android:tag="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/d2"
            style="@style/numpad_key"
            android:tag="2"
            android:text="@string/_2" />

        <Button
            android:id="@+id/d3"
            style="@style/numpad_key"
            android:tag="3"
            android:text="@string/_3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/d4"
            style="@style/numpad_key"
            android:tag="4"
            android:text="@string/_4" />

        <Button
            android:id="@+id/d5"
            style="@style/numpad_key"
            android:tag="5"
            android:text="@string/_5" />

        <Button
            android:id="@+id/d6"
            style="@style/numpad_key"
            android:tag="6"
            android:text="@string/_6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/d7"
            style="@style/numpad_key"
            android:tag="7"
            android:text="@string/_7" />

        <Button
            android:id="@+id/d8"
            style="@style/numpad_key"
            android:tag="8"
            android:text="@string/_8" />

        <Button
            android:id="@+id/d9"
            style="@style/numpad_key"
            android:tag="9"
            android:text="@string/_9" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_decimal"
            android:visibility="gone"
            android:tag="."
            style="@style/numpad_key" />

        <Button
            android:id="@+id/forgot_pin_code"
            android:visibility="gone"
            style="@style/numpad_key"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:text="@string/forgot_pin_code"
            android:textAllCaps="true"
            android:textSize="12sp" />

        <Button
            android:id="@+id/empty"
            android:visibility="gone"
            android:clickable="false"
            style="@style/numpad_key"/>

        <Button
            android:id="@+id/d0"
            style="@style/numpad_key"
            android:tag="0"
            android:text="@string/_0" />

        <ImageButton
            android:id="@+id/backspace"
            style="@style/numpad_key"
            android:tint="@color/primary_text"
            app:srcCompat="@drawable/ic_form_backspace" />

    </LinearLayout>
</LinearLayout>
