<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_pf"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView
        style="?pf_lock_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="60dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_iphone_1"
            android:layout_gravity="center"
            />

        <com.example.marta.pin2.views.PFCodeView
            android:id="@+id/code_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp" />

        <ImageView
            android:id="@+id/fingerprint_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fingerprint"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/secondary_text"
            app:layout_constraintTop_toBottomOf="@+id/pin_dots_view"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/pin_code_hint1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/use_fingerprint_or_enter_pin_code"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/fingerprint_iv1"
            />
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="30dp"-->
<!--            android:orientation="horizontal">-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_1"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="1"-->
<!--                  />-->
<!--            </FrameLayout>-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_2"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="2"-->
<!--             />-->
<!--            </FrameLayout>-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_3"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="3"-->
<!--                  />-->
<!--            </FrameLayout>-->

<!--        </LinearLayout>-->    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/d1"
            style="@style/numpad_key"
            android:tag="1"
            android:text="@string/_1" />

        <Button
            android:id="@+id/d2"
            style="@style/numpad_key"
            android:tag="2"
            android:text="@string/_2" />

        <Button
            android:id="@+id/d3"
            style="@style/numpad_key"
            android:tag="3"
            android:text="@string/_3" />
    </LinearLayout>



<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:orientation="horizontal">-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_4"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="4"-->
<!--           />-->
<!--            </FrameLayout>-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_5"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="5"-->
<!--               />-->
<!--            </FrameLayout>-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_6"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="6"-->
<!--                   />-->
<!--            </FrameLayout>-->

<!--        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/d4"
                style="@style/numpad_key"
                android:tag="4"
                android:text="@string/_4" />

            <Button
                android:id="@+id/d5"
                style="@style/numpad_key"
                android:tag="5"
                android:text="@string/_5" />

            <Button
                android:id="@+id/d6"
                style="@style/numpad_key"
                android:tag="6"
                android:text="@string/_6" />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:orientation="horizontal">-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_7"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="7"-->
<!--               />-->
<!--            </FrameLayout>-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_8"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="8"-->
<!--                    />-->
<!--            </FrameLayout>-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_9"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="9"-->
<!--            />-->
<!--            </FrameLayout>-->

<!--        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/d7"
                style="@style/numpad_key"
                android:tag="7"
                android:text="@string/_7" />

            <Button
                android:id="@+id/d8"
                style="@style/numpad_key"
                android:tag="8"
                android:text="@string/_8" />

            <Button
                android:id="@+id/d9"
                style="@style/numpad_key"
                android:tag="9"
                android:text="@string/_9" />
        </LinearLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="25dp"-->
<!--            android:orientation="horizontal">-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_left"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="@drawable/side_button_background_pf"-->
<!--                    android:clickable="true"-->
<!--                    android:focusable="true"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/back"-->
<!--                    style="?pf_hint"/>-->
<!--            </FrameLayout>-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_0"-->
<!--                    style="?pf_key_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text="0"-->
<!--                 />-->
<!--            </FrameLayout>-->

<!--            <FrameLayout-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1">-->

<!--                <TextView-->
<!--                    android:id="@+id/button_right"-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:gravity="center"-->
<!--                    android:text=""-->
<!--                    android:visibility="gone" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/button_delete"-->
<!--                    style="?pf_delete_button"-->
<!--                    android:layout_width="70dp"-->
<!--                    android:layout_height="70dp"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:background="@drawable/side_button_background_pf"-->
<!--                    android:gravity="center"-->
<!--                    android:text="fp"-->
<!--                   />-->



<!--            </FrameLayout>-->

<!--        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_decimal"
                android:visibility="gone"
                android:tag="."
                style="@style/numpad_key" />

            <Button
                android:id="@+id/forgot_pin_code"
                android:visibility="gone"
                style="@style/numpad_key"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/forgot_pin_code"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <Button
                android:id="@+id/empty"
                android:visibility="gone"
                android:clickable="false"
                style="@style/numpad_key"/>
            <ImageButton
                android:id="@+id/backspace"
                style="@style/numpad_key"
                android:tint="@color/primary_text"
                app:srcCompat="@drawable/ic_form_backspace" />
            <Button
                android:id="@+id/d0"
                style="@style/numpad_key"
                android:tag="0"
                android:text="@string/_0" />

            <ImageButton
                android:id="@+id/imb1_ok"
                style="@style/numpad_key"
                android:tint="@color/primary_text"
                app:srcCompat="@drawable/ic_ok" />

        </LinearLayout>

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:gravity="center">-->

<!--        <Button-->
<!--            android:id="@+id/button_next"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Next"-->
<!--            android:visibility="visible"-->

<!--            style="?pf_next"/>-->

<!--    </LinearLayout>-->
</RelativeLayout>
